--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <img 
             src="/Image/top.png"
             alt="Designer workspace"
-            class="object-cover w-8 h-8 sm:w-10 sm:h-10 md:w-12 md:h-12"
+            class="object-cover w-8 h-8 sm:w-10 sm:h-10 md:w-16 md:h-16"
           />
      </div>
     <!-- Header / Hero -->
     <section
-      class="container mx-auto flex flex-col lg:flex-row items-end justify-between py-8 sm:py-12 md:py-16 px-4 sm:px-6 lg:px-8 xl:px-0"
+      class="container mx-auto flex flex-col gap-20 lg:flex-row items-end justify-between py-8 sm:py-12 md:py-28 mt-[40px] mb-16 px-4 sm:px-6 lg:px-8 xl:px-0"
     >
       <div class="lg:w-1/2 w-full">
         <p class="text-[#373737] font-dm-sans font-bold text-[24px]">Hey, I'm a</p>
@@ -41,7 +41,7 @@
           </div>
         </div>
         <h1 class="text-[#373737] font-dm-sans font-bold text-[150px] leading-[135px]">Designer</h1>
-        <p class="text-[#373737] font-dm-sans font-semibold text-[24px] mt-4">
+        <p class="text-[#373737] font-dm-sans font-medium text-[24px] mt-10">
           Turning messy ideas into clean, user-friendly products.
         </p>
       </div>
@@ -57,82 +57,77 @@
     </section>
 
     <!-- About Me -->
-    <section class="text-center py-8 sm:py-12 md:py-16 px-4 sm:px-6 lg:px-8">
-      <p class="text-lg sm:text-xl md:text-2xl text-gray-500 mb-3 sm:mb-4">About me</p>
-      <p class="text-xl sm:text-2xl md:text-3xl text-gray-800 max-w-4xl mx-auto font-medium leading-relaxed">
-        I'm Shimul, a UI/UX Designer focused on crafting clean, intuitive, and
-        user-friendly digital products. I combine creativity with usability to
-        deliver designs that make everyday interactions feel simple and
-        seamless.
+    <section class="text-center py-8 ">
+      <p class="text-[#373737] font-dm-sans font-regular text-[24px] mb-4">About me</p>
+      <hr>
+      <p class="text-[#373737] font-dm-sans font-medium text-[56px] mt-8
+      ">
+        I’m Shimul, a UI/UX Designer focused on crafting clean, intuitive, and user-friendly digital products. I combine creativity with usability to deliver designs that make everyday interactions feel simple and seamless. Constantly learning, adapting, and pushing for better experiences.
       </p>
     </section>
 
     <!-- Recent Work -->
-    <section class="container mx-auto py-8 sm:py-12 md:py-16 px-4 sm:px-6 lg:px-8 xl:px-0">
-      <p class="text-lg sm:text-xl md:text-2xl text-gray-500 text-center mb-8 sm:mb-10 md:mb-12">Recent Work</p>
-
-      <div class="flex flex-col gap-24">
+    <section class="container mx-auto py-8 sm:py-12 md:py-16 mt-[100px] px-4 sm:px-6 lg:px-8 xl:px-0">
+      <p class="text-[#373737] text-center font-dm-sans font-regular text-[24px] mb-4">My Recent Works</p>
+      <hr>
+      <div class="flex flex-col mt-8 gap-[40px]">
         <!-- Gorée Life Project -->
         <div
-          class="bg-white bg-opacity-50 rounded-2xl border border-gray-300 overflow-hidden flex flex-col"
+          class="bg-white border bg-opacity-48 rounded-[32px] p-[32px] overflow-hidden flex flex-row gap-[80px]"
         >
-          <div class="flex-1 p-4 sm:p-5 md:p-6 flex flex-col justify-between">
+          <div class="flex-1 w-f  items-start p-4 sm:p-5 md:p-6 flex flex-col justify-between">
             <img
-              src="https://images.unsplash.com/photo-1611224923853-80b023f02d71?w=300&h=80&fit=crop"
+              src="/Image/1 logo.png"
               alt="Gorée Life Logo"
-              class="h-14 sm:h-16 md:h-20 object-contain mb-3 sm:mb-4"
+              class="h-[80] w-[300] md:h-20 object-contain  mb-3 sm:mb-4"
             />
-            <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-800 mb-2">Gorée Life</h2>
-            <p class="text-sm sm:text-base text-gray-600 mb-3 sm:mb-4 leading-relaxed">
+            <h2 class="text-[#373737] font-dm-sans font-bold text-[40px]">Gorée Life</h2>
+            <p class="text-[#636363] font-dm-sans font-regular text-[20px]">
               Gorée Life is a mobile app that boosts tourism on Gorée Island,
               Senegal. It offers easy access to tickets, guided tours, museum
               info, hotels, restaurants, and an interactive map. Users can also
               maintain a digital journal to capture their experiences.
             </p>
             <button
-              class="bg-gray-700 hover:bg-gray-800 text-white px-4 sm:px-5 md:px-6 py-2 rounded-lg w-max transition-all text-sm sm:text-base"
+              class="bg-[#919191] hover:bg-[#373737] text-[#ffffff] px-4 sm:px-5 md:px-6 py-2 rounded-lg w-max transition-all text-sm sm:text-base"
             >
               Case Study
             </button>
           </div>
-          <div class="flex-1 min-h-[200px] sm:min-h-[250px] md:min-h-[300px]">
+          <div class="flex-1 p-4 min-h-[200px] sm:min-h-[250px] md:min-h-[300px]">
             <img
-              src="https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?w=500&h=500&fit=crop"
+              src="/Image/1 cover.png"
               alt="Gorée Life App Interface"
-              class="w-full h-full object-cover"
+              class="w-full h-[420] object-cover"
             />
           </div>
         </div>
 
         <!-- Les Pinks Project -->
         <div
-          class="bg-white bg-opacity-50 rounded-2xl border border-gray-300 overflow-hidden flex flex-col"
+          class="bg-white bg-opacity-48 rounded-[32px] p-[32px] flex flex-row gap-[80px]"
         >
-          <div class="flex-1 p-4 sm:p-5 md:p-6 flex flex-col justify-between">
+          <div class="flex-1 w-f p-4 item sm:p-5 md:p-6 flex flex-col  justify-between">
             <img
-              src="https://images.unsplash.com/photo-1611224923853-80b023f02d71?w=154&h=71&fit=crop"
-              alt="Les Pinks Logo"
-              class="h-12 sm:h-14 md:h-16 object-contain mb-3 sm:mb-4"
+              src="/Image/2 logo.png"
+              alt="Les Pinks"
+              class="h-[80] w-[300] md:h-20 object-contain mb-3 sm:mb-4"
             />
-            <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-800 mb-2">Les Pinks</h2>
-            <p class="text-sm sm:text-base text-gray-600 mb-3 sm:mb-4 leading-relaxed">
-              Les Pinks is a creative platform celebrating the artistry and
-              style of Les Pinks. The project showcases their work through a
-              clean, visually engaging digital experience, allowing users to
-              explore, connect, and immerse themselves in the brand's unique
-              vision.
+            <h2 class="text-[#373737] font-dm-sans font-bold text-[40px]">Les Pinks</h2>
+            <p class="text-[#636363] font-dm-sans font-regular text-[20px]">
+              Les Pinks is a creative platform celebrating the artistry and style of Les Pinks. The project showcases their work through a clean, visually engaging digital experience, allowing users to explore, connect, and immerse themselves in the brand’s unique vision.
             </p>
             <button
-              class="bg-gray-700 hover:bg-gray-800 text-white px-4 sm:px-5 md:px-6 py-2 rounded-lg w-max transition-all text-sm sm:text-base"
+              class="bg-[#919191] hover:bg-[#373737] text-[#ffffff] px-4 sm:px-5 md:px-6 py-2 rounded-lg w-max transition-all text-sm sm:text-base"
             >
               Case Study
             </button>
           </div>
-          <div class="flex-1 min-h-[200px] sm:min-h-[250px] md:min-h-[300px]">
+          <div class="flex-1 p-4 min-h-[200px] sm:min-h-[250px] md:min-h-[300px]">
             <img
-              src="https://images.unsplash.com/photo-1551650975-87deedd944c3?w=500&h=500&fit=crop"
-              alt="Les Pinks Interface"
-              class="w-full h-full object-cover"
+              src="/Image/2 cover.png"
+              alt="Les Pinks"
+              class="w-full h-[420] object-cover"
             />
           </div>
         </div>
@@ -140,7 +135,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section class="bg-gray-50 py-8 sm:py-12 md:py-16 px-4 sm:px-6 lg:px-8 text-center">
+    <section class="bg-[#ffffff] rounded-[32px] py-8 sm:py-12 mt-[100px] md:py-16 px-4 sm:px-6 lg:px-8 text-center">
       <h2 class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold text-gray-600 mb-3 sm:mb-4 leading-tight px-2">
         Do you already have a concept or vision?
       </h2>
@@ -150,69 +145,69 @@
 
       <form class="max-w-2xl mx-auto grid gap-4 sm:gap-5 md:gap-6 text-left">
         <div>
-          <label class="text-base sm:text-lg font-semibold text-black mb-2 block" for="name"
+          <label class="text-base text-[18px] font-medium text-[#373737] mb-2 block" for="name"
             >Name</label
           >
           <input
             type="text"
             id="name"
             placeholder="Write your name"
-            class="w-full border border-gray-300 rounded-md px-3 sm:px-4 py-2 focus:outline-none focus:ring-2 focus:ring-gray-400 text-sm sm:text-base"
+            class="w-full border border-gray-300 rounded-[6px] px-3 sm:px-4 py-2 focus:outline-none focus:ring-2 focus:ring-gray-400 text-sm sm:text-base"
           />
         </div>
         <div>
-          <label class="text-base sm:text-lg font-semibold text-black mb-2 block" for="email"
+          <label class="text-base text-[18px] font-medium text-[#373737] mb-2 block" for="email"
             >Email</label
           >
           <input
             type="email"
             id="email"
             placeholder="e.g: abds@gmail.com"
-            class="w-full border border-gray-300 rounded-md px-3 sm:px-4 py-2 focus:outline-none focus:ring-2 focus:ring-gray-400 text-sm sm:text-base"
+            class="w-full border border-gray-300 rounded-[6px] px-3 sm:px-4 py-2 focus:outline-none focus:ring-2 focus:ring-gray-400 text-sm sm:text-base"
           />
         </div>
         <div>
           <label
-            class="text-base sm:text-lg font-semibold text-black mb-2 block"
+            class="text-base text-[18px] font-medium text-[#373737] mb-2 block"
             for="message"
             >Your Message</label
           >
           <textarea
             id="message"
             placeholder="Write here about your vision..."
-            class="w-full border border-gray-300 rounded-md px-3 sm:px-4 py-2 h-28 sm:h-32 resize-none focus:outline-none focus:ring-2 focus:ring-gray-400 text-sm sm:text-base"
+            class="w-full border border-gray-300 rounded-[6px] px-3 sm:px-4 py-2 h-28 sm:h-32 resize-none focus:outline-none focus:ring-2 focus:ring-gray-400 text-sm sm:text-base"
           ></textarea>
         </div>
         <button
           type="submit"
-          class="bg-gray-700 hover:bg-gray-800 text-white px-6 sm:px-7 md:px-8 py-2.5 sm:py-3 rounded-lg w-max mx-auto transition-all text-sm sm:text-base"
-        >
-          Reach Out
-        </button>
+            class="bg-[#919191] hover:bg-[#373737] text-[#ffffff] px-4 sm:px-5 md:px-6 py-2 rounded-lg w-max transition-all text-sm sm:text-base"
+            >
+              Case Study
+            </button>
       </form>
     </section>
 
     <!-- Footer -->
     <footer class="py-8 sm:py-12 md:py-16 text-center px-4">
       <img
-        src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=100&h=100&fit=crop&crop=face"
+        src="/Image/Ellipse 7228ds.png"
         alt="Profile"
-        class="mx-auto w-12 h-12 sm:w-14 sm:h-14 md:w-16 md:h-16 rounded-full mb-3 sm:mb-4"
+        class="mx-auto w-24 h-24 sm:w-14 sm:h-14 md:w-16 md:h-16 rounded-full mb-3 sm:mb-4"
       />
-      <p class="text-gray-800 text-lg sm:text-xl font-medium">Md Ibrahim Shimul</p>
-      <p class="text-gray-500 text-sm sm:text-base mb-4 sm:mb-5 md:mb-6">UIUX Designer</p>
-      <div class="flex justify-center gap-6 sm:gap-8 md:gap-10">
+      <p class="text-[#373737] text-[20px] mb-4 font-medium">Md Ibrahim Shimul</p>
+      <p class="text-[#373737] text-[16px] mb-12 font-medium">UIUX Designer</p>
+      <div class="flex justify-center gap-6 sm:gap-8 mt-10 md:gap-10">
         <!-- LinkedIn -->
-        <a href="#" class="hover:opacity-70"
-          ><img src="linkedin-icon.svg" alt="LinkedIn" class="w-6 h-6 sm:w-7 sm:h-7 md:w-8 md:h-8"
+        <a href="https://bd.linkedin.com/in/mdibrahimshimul?trk=public_post_feed-actor-name" class="hover:opacity-70"
+          ><img src="/Image/linkedin.svg" alt="LinkedIn" class="w-6 h-6 sm:w-7 sm:h-7 md:w-8 md:h-8"
         /></a>
         <!-- Instagram -->
-        <a href="#" class="hover:opacity-70"
-          ><img src="instagram-icon.svg" alt="Instagram" class="w-6 h-6 sm:w-7 sm:h-7 md:w-8 md:h-8"
+        <a href="https://dribbble.com/mdibrahimshimul" class="hover:opacity-70"
+          ><img src="/Image/drivvle.svg" alt="Instagram" class="w-6 h-6 sm:w-7 sm:h-7 md:w-8 md:h-8"
         /></a>
         <!-- Dribbble -->
-        <a href="#" class="hover:opacity-70"
-          ><img src="dribbble-icon.svg" alt="Dribbble" class="w-6 h-6 sm:w-7 sm:h-7 md:w-8 md:h-8"
+        <a href="https://www.behance.net/mdibrahimshimul" class="hover:opacity-70"
+          ><img src="/Image/behance.svg" alt="Dribbble" class="w-6 h-6 sm:w-7 sm:h-7 md:w-8 md:h-8"
         /></a>
       </div>
     </footer>
