--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
       <div class="lg:w-1/2 w-full">
         <p class="text-[#373737] font-dm-sans font-bold text-[24px]">Hey, I'm a</p>
         <div class="relative">
-          <h1 class="text-[#373737] font-dm-sans font-bold text-[150px]  leading-[135px]">UIUX</h1>
+          <div class="leading-tight">
+            <h1 class="text-[#373737] font-dm-sans font-bold text-[80px] md:text-[150px]">UIUX</h1>
+            <h1 class="text-[#373737] font-dm-sans font-bold text-[80px] md:text-[150px] mt-[-10px]">Designer</h1>
+          </div>
+
+          
           <div class="absolute -top-3 sm:-top-4 md:-top-4 left-[140px] sm:left-[180px] md:left-[320px] h-16 w-16 sm:h-20 sm:w-20 md:h-28 md:w-28 lg:h-44 lg:w-44">
             <img
               src="/Image/bullseye.png"
@@ -40,7 +45,7 @@
             />
           </div>
         </div>
-        <h1 class="text-[#373737] font-dm-sans font-bold text-[150px] leading-[135px]">Designer</h1>
+        
         <p class="text-[#373737] font-dm-sans font-medium text-[24px] mt-10">
           Turning messy ideas into clean, user-friendly products.
         </p>
@@ -62,7 +67,7 @@
       <hr>
       <p class="text-[#373737] font-dm-sans font-medium text-[56px] mt-8
       ">
-        I’m Shimul, a UI/UX Designer focused on crafting clean, intuitive, and user-friendly digital products. I combine creativity with usability to deliver designs that make everyday interactions feel simple and seamless. Constantly learning, adapting, and pushing for better experiences.
+        I'm Shimul, a UI/UX Designer focused on crafting clean, intuitive, and user-friendly digital products. I combine creativity with usability to deliver designs that make everyday interactions feel simple and seamless. Constantly learning, adapting, and pushing for better experiences.
       </p>
     </section>
 
@@ -195,7 +200,7 @@
         class="mx-auto w-24 h-24 sm:w-14 sm:h-14 md:w-16 md:h-16 rounded-full mb-3 sm:mb-4"
       />
       <p class="text-[#373737] text-[20px] mb-4 font-medium">Md Ibrahim Shimul</p>
-      <p class="text-[#373737] text-[16px] mb-12 font-medium">UIUX Designer</p>
+      <p class="text-[#373737] text-[16px] font-medium">UIUX Designer</p>
       <div class="flex justify-center gap-6 sm:gap-8 mt-10 md:gap-10">
         <!-- LinkedIn -->
         <a href="https://bd.linkedin.com/in/mdibrahimshimul?trk=public_post_feed-actor-name" class="hover:opacity-70"
