--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
       <div class="flex flex-col mt-8 gap-[40px]">
         <!-- Gorée Life Project -->
         <div
-          class="bg-white border bg-opacity-48 rounded-[32px] p-[32px] overflow-hidden flex flex-row gap-[80px]"
+          class="bg-white border bg-opacity-48 rounded-[32px] p-2 md:p-[32px] overflow-hidden flex flex-col-reverse md:flex-row gap-1 md:gap-[80px]"
         >
-          <div class="flex-1 w-f  items-start p-4 sm:p-5 md:p-6 flex flex-col justify-between">
+          <div class="flex-1 w-full  items-start p-4 sm:p-5 md:p-6 flex flex-col justify-between">
             <img
               src="/Image/1 logo.png"
               alt="Gorée Life Logo"
-              class="h-[80] w-[300] md:h-20 object-contain  mb-3 sm:mb-4"
+              class="h-10 md:h-[80] md:w-[300] object-contain  mb-3 sm:mb-4"
             />
-            <h2 class="text-[#373737] font-dm-sans font-bold text-[40px]">Gorée Life</h2>
+            <h2 class="text-[#373737] font-dm-sans font-bold text: md:text-[40px]">Gorée Life</h2>
             <p class="text-[#636363] font-dm-sans font-regular text-[20px]">
               Gorée Life is a mobile app that boosts tourism on Gorée Island,
               Senegal. It offers easy access to tickets, guided tours, museum
@@ -94,12 +94,12 @@
               maintain a digital journal to capture their experiences.
             </p>
             <button
-              class="bg-[#919191] hover:bg-[#373737] text-[#ffffff] px-4 sm:px-5 md:px-6 py-2 rounded-lg w-max transition-all text-sm sm:text-base"
+              class="bg-[#919191] hover:bg-[#373737] text-[#ffffff] px-4 sm:px-5 mt-3 md:px-6 py-2 rounded-lg w-max transition-all text-sm sm:text-base"
             >
               Case Study
             </button>
           </div>
-          <div class="flex-1 p-4 min-h-[200px] sm:min-h-[250px] md:min-h-[300px]">
+          <div class="flex-1 p-4 min-h-[200px] sm:min-h-[250px] md:min-h-[300px] ">
             <img
               src="/Image/1 cover.png"
               alt="Gorée Life App Interface"
