--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body class="bg-[#F0F0F0] max-w-[1280px] mx-auto">
     <!-- top icon -->
-     <div class="flex items-center mt-4 sm:mt-6 md:mt-8 w-full justify-center">
+     <div class="flex items-center mt-4 sm:mt-6 md:mt-4 w-full justify-center">
       <img 
             src="/Image/top.png"
             alt="Designer workspace"
@@ -26,7 +26,7 @@
      </div>
     <!-- Header / Hero -->
     <section
-      class="container mx-auto flex flex-col gap-20 lg:flex-row items-end justify-between py-8 sm:py-12 md:py-28 mt-[40px] mb-16 px-4 sm:px-6 lg:px-8 xl:px-0"
+      class="container mx-auto flex flex-col gap-20 lg:flex-row items-end justify-between py-8 sm:py-12 md:py-28 mt-[20px] mb-16 px-4 sm:px-6 lg:px-8 xl:px-0"
     >
       <div class="lg:w-1/2 w-full">
         <p class="text-[#373737] font-dm-sans font-bold text-[24px]">Hey, I'm a</p>
@@ -65,7 +65,7 @@
     <section class="text-center py-8 ">
       <p class="text-[#373737] font-dm-sans font-regular text-[24px] mb-4">About me</p>
       <hr>
-      <p class="text-[#373737] font-dm-sans font-medium text-[56px] mt-8
+      <p class="text-[#373737] font-dm-sans font-medium text:[32px]  md:text-[56px] ml-4
       ">
         I'm Shimul, a UI/UX Designer focused on crafting clean, intuitive, and user-friendly digital products. I combine creativity with usability to deliver designs that make everyday interactions feel simple and seamless. Constantly learning, adapting, and pushing for better experiences.
       </p>
@@ -73,12 +73,12 @@
 
     <!-- Recent Work -->
     <section class="container mx-auto py-8 sm:py-12 md:py-16 mt-[100px] px-4 sm:px-6 lg:px-8 xl:px-0">
-      <p class="text-[#373737] text-center font-dm-sans font-regular text-[24px] mb-4">My Recent Works</p>
+      <p class="text-[#373737] text-center font-dm-sans font-regular text-[24px] mb-2 md:mb-4">My Recent Works</p>
       <hr>
-      <div class="flex flex-col mt-8 gap-[40px]">
+      <div class="flex flex-col mt-4 md:mt-8 gap-[40px]">
         <!-- Gorée Life Project -->
         <div
-          class="bg-white border bg-opacity-48 rounded-[32px] p-2 md:p-[32px] overflow-hidden flex flex-col-reverse md:flex-row gap-1 md:gap-[80px]"
+          class="bg-white border bg-opacity-48 rounded-[16px] md:rounded-[32px] p-0.5 md:p-[32px] overflow-hidden flex flex-col-reverse md:flex-row gap-1 md:gap-[80px]"
         >
           <div class="flex-1 w-full  items-start p-4 sm:p-5 md:p-6 flex flex-col justify-between">
             <img
@@ -86,8 +86,8 @@
               alt="Gorée Life Logo"
               class="h-10 md:h-[80] md:w-[300] object-contain  mb-3 sm:mb-4"
             />
-            <h2 class="text-[#373737] font-dm-sans font-bold text: md:text-[40px]">Gorée Life</h2>
-            <p class="text-[#636363] font-dm-sans font-regular text-[20px]">
+            <h2 class="text-[#373737] font-dm-sans font-bold text-[28px] md:text-[40px]">Gorée Life</h2>
+            <p class="text-[#636363] font-dm-sans font-regular text-[16px] md:text-[20px]">
               Gorée Life is a mobile app that boosts tourism on Gorée Island,
               Senegal. It offers easy access to tickets, guided tours, museum
               info, hotels, restaurants, and an interactive map. Users can also
@@ -110,28 +110,29 @@
 
         <!-- Les Pinks Project -->
         <div
-          class="bg-white bg-opacity-48 rounded-[32px] p-[32px] flex flex-row gap-[80px]"
+          class="bg-white border bg-opacity-48 rounded-[16px] md:rounded-[32px] p-0.5 md:p-[32px] overflow-hidden flex flex-col-reverse md:flex-row gap-1 md:gap-[80px]"
         >
-          <div class="flex-1 w-f p-4 item sm:p-5 md:p-6 flex flex-col  justify-between">
+          <div class="flex-1 w-full  items-start p-4 sm:p-5 md:p-6 flex flex-col justify-between">
             <img
               src="/Image/2 logo.png"
-              alt="Les Pinks"
-              class="h-[80] w-[300] md:h-20 object-contain mb-3 sm:mb-4"
+              alt="Les Pinks Logo"
+              class="h-10 md:h-[80] md:w-[300] object-contain  mb-3 sm:mb-4"
             />
-            <h2 class="text-[#373737] font-dm-sans font-bold text-[40px]">Les Pinks</h2>
-            <p class="text-[#636363] font-dm-sans font-regular text-[20px]">
+            <h2 class="text-[#373737] font-dm-sans font-bold text-[28px] md:text-[40px]">Les Pinks</h2>
+            <p class="text-[#636363] font-dm-sans font-regular text-[16px] md:text-[20px]">
               Les Pinks is a creative platform celebrating the artistry and style of Les Pinks. The project showcases their work through a clean, visually engaging digital experience, allowing users to explore, connect, and immerse themselves in the brand’s unique vision.
+
             </p>
             <button
-              class="bg-[#919191] hover:bg-[#373737] text-[#ffffff] px-4 sm:px-5 md:px-6 py-2 rounded-lg w-max transition-all text-sm sm:text-base"
+              class="bg-[#919191] hover:bg-[#373737] text-[#ffffff] px-4 sm:px-5 mt-3 md:px-6 py-2 rounded-lg w-max transition-all text-sm sm:text-base"
             >
               Case Study
             </button>
           </div>
-          <div class="flex-1 p-4 min-h-[200px] sm:min-h-[250px] md:min-h-[300px]">
+          <div class="flex-1 p-4 min-h-[200px] sm:min-h-[250px] md:min-h-[300px] ">
             <img
               src="/Image/2 cover.png"
-              alt="Les Pinks"
+              alt="Gorée Life App Interface"
               class="w-full h-[420] object-cover"
             />
           </div>
@@ -140,7 +141,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section class="bg-[#ffffff] rounded-[32px] py-8 sm:py-12 mt-[100px] md:py-16 px-4 sm:px-6 lg:px-8 text-center">
+    <section class="bg-[#ffffff] rounded-[32px] ml-4 me-4 py-8 sm:py-12 mt-6 md:mt-[100px] md:py-16 px-4 sm:px-6 lg:px-8 text-center">
       <h2 class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold text-gray-600 mb-3 sm:mb-4 leading-tight px-2">
         Do you already have a concept or vision?
       </h2>
@@ -187,7 +188,7 @@
           type="submit"
             class="bg-[#919191] hover:bg-[#373737] text-[#ffffff] px-4 sm:px-5 md:px-6 py-2 rounded-lg w-max transition-all text-sm sm:text-base"
             >
-              Case Study
+              Reach Out
             </button>
       </form>
     </section>
