--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   </head>
   <body class="bg-[#F0F0F0] max-w-[1280px] mx-auto">
     <!-- top icon -->
-     <div class="flex items-center mt-4 sm:mt-6 md:mt-4 w-full justify-center">
+     <div class="flex items-center mt-5 sm:mt-6 md:mt-8 w-full justify-center">
       <img 
             src="/Image/top.png"
             alt="Designer workspace"
-            class="object-cover w-8 h-8 sm:w-10 sm:h-10 md:w-16 md:h-16"
+            class="object-cover w-12 h-12 md:w-20 md:h-20"
           />
      </div>
     <!-- Header / Hero -->
@@ -29,15 +29,15 @@
       class="container mx-auto flex flex-col gap-20 lg:flex-row items-end justify-between py-8 sm:py-12 md:py-28 mt-[20px] mb-16 px-4 sm:px-6 lg:px-8 xl:px-0"
     >
       <div class="lg:w-1/2 w-full">
-        <p class="text-[#373737] font-dm-sans font-bold text-[24px]">Hey, I'm a</p>
+        <p class="text-[#373737] font-dm-sans font-bold text-[20px]">Hey, I'm a</p>
         <div class="relative">
           <div class="leading-tight">
-            <h1 class="text-[#373737] font-dm-sans font-bold text-[80px] md:text-[150px]">UIUX</h1>
-            <h1 class="text-[#373737] font-dm-sans font-bold text-[80px] md:text-[150px] mt-[-10px]">Designer</h1>
+            <h1 class="text-[#373737] font-dm-sans font-bold text-[60px] md:text-[150px]">UIUX</h1>
+            <h1 class="text-[#373737] font-dm-sans font-bold text-[60px] md:text-[150px] mt-[-10px]">Designer</h1>
           </div>
 
           
-          <div class="absolute -top-3 sm:-top-4 md:-top-4 left-[140px] sm:left-[180px] md:left-[320px] h-16 w-16 sm:h-20 sm:w-20 md:h-28 md:w-28 lg:h-44 lg:w-44">
+          <div class="absolute -top-1 md:-top-4 left-[200px] sm:left-[180px] md:left-[320px] h-16 w-16 sm:h-20 sm:w-20 md:h-28 md:w-28 lg:h-44 lg:w-44">
             <img
               src="/Image/bullseye.png"
               alt="bullseye"
@@ -46,14 +46,14 @@
           </div>
         </div>
         
-        <p class="text-[#373737] font-dm-sans font-medium text-[24px] mt-10">
+        <p class="text-[#373737] font-dm-sans font-medium text-[24px] mt-10 md:mt-16">
           Turning messy ideas into clean, user-friendly products.
         </p>
       </div>
       <div class="lg:w-1/2 w-full mt-8 sm:mt-10 lg:mt-0">
         <div class="rounded-3xl overflow-hidden w-full">
           <img
-            src="/Image/profile.png"
+            src="\Image\profile.png
             alt="Designer workspace"
             class="object-cover w-full h-full"
           />
@@ -65,7 +65,7 @@
     <section class="text-center py-8 ">
       <p class="text-[#373737] font-dm-sans font-regular text-[24px] mb-4">About me</p>
       <hr>
-      <p class="text-[#373737] font-dm-sans font-medium text:[32px]  md:text-[56px] ml-4
+      <p class="text-[#373737] font-dm-sans font-medium text-[24px] md:text-[56px] ml-4 me-4 mt-4 
       ">
         I'm Shimul, a UI/UX Designer focused on crafting clean, intuitive, and user-friendly digital products. I combine creativity with usability to deliver designs that make everyday interactions feel simple and seamless. Constantly learning, adapting, and pushing for better experiences.
       </p>
