--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="lg:w-1/2 w-full mt-8 sm:mt-10 lg:mt-0">
         <div class="rounded-3xl overflow-hidden w-full">
           <img
-            src="\Image\profile.png
+            src="/Image/profile.png"
             alt="Designer workspace"
             class="object-cover w-full h-full"
           />
