--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body class="bg-[#F0F0F0] max-w-[1280px] mx-auto">
     <!-- top icon -->
-     <div class="flex items-center mt-5 sm:mt-6 md:mt-8 w-full justify-center">
+     <div class="flex items-center mt-5 sm:mt-6 md:mt-6 w-full justify-center">
       <img 
             src="/Image/top.png"
             alt="Designer workspace"
@@ -37,7 +37,7 @@
           </div>
 
           
-          <div class="absolute -top-1 md:-top-4 left-[200px] sm:left-[180px] md:left-[320px] h-16 w-16 sm:h-20 sm:w-20 md:h-28 md:w-28 lg:h-44 lg:w-44">
+          <div class="absolute -top-2 md:-top-4 left-[140px] md:left-[320px] h-20 w-20  md:h-28 md:w-28 lg:h-44 lg:w-44">
             <img
               src="/Image/bullseye.png"
               alt="bullseye"
@@ -46,11 +46,11 @@
           </div>
         </div>
         
-        <p class="text-[#373737] font-dm-sans font-medium text-[24px] mt-10 md:mt-16">
+        <p class="text-[#373737] font-dm-sans font-medium text-[24px] mt-6 md:mt-16">
           Turning messy ideas into clean, user-friendly products.
         </p>
       </div>
-      <div class="lg:w-1/2 w-full mt-8 sm:mt-10 lg:mt-0">
+      <div class="w-1/4 lg:w-1/2 w-full mt-6 lg:mt-0">
         <div class="rounded-3xl overflow-hidden w-full">
           <img
             src="/Image/profile.png"
